--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -1,16 +1,13 @@
-# base-image for node on any machine using a template variable,
-# see more about dockerfile templates here: http://docs.resin.io/deployment/docker-templates/
-# and about resin base images here: http://docs.resin.io/runtime/resin-base-images/
-# Note the node:slim image doesn't have node-gyp
+# Chose base image
 FROM resin/%%RESIN_MACHINE_NAME%%-node:6
 
-# use apt-get if you need to install dependencies,
-# for instance if you need ALSA sound utils, just uncomment the lines below.
-#RUN apt-get update && apt-get install -yq \
-#    alsa-utils libasound2-dev && \
-#    apt-get clean && rm -rf /var/lib/apt/lists/*
+# Install pigpio
+RUN apt-get update \
+  && apt-get install -y \
+    pigpio \
+      && rm -rf /var/lib/apt/lists/*
 
-# Defines our working directory in container
+# Set working directory
 WORKDIR /usr/src/app
 
 # Copies the package.json first for better cache on later pushes
