--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
+  "repository" : {
+    "type" : "git",
+    "url" : "https://github.com/arthurborgesdev/ledBlink.git"
+  },
   "keywords": [
     "led",
     "gojs"
